# qdags

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  j3  main  main.cpp  maintest  qdags
data/: chooseDataset.sh  grid32R  grid32S  test
data/miniTests/: 1qdagR  grid32R  grid32S  grid32Syz  grid32Syzt2  grid64R  grid64S  grid64T  qdagR  qdagS  qdagT  t1  t2
data/pri/: createAllPri-j4.sh  createAllPri.sh  createExpPri-j3.sh  createExpPri-v2.sh  createExpPri.sh
data/pri-exp/: createAllPri-j3.sh  createAllPri-v2.sh  createExpPri-j4.sh
data/pri-exp/j3/: pri1-1  pri1-11  pri1-12  pri1-13  pri1-17  pri1-18  pri1-19  pri1-21  pri1-23  pri1-29  pri1-3  pri1-32  pri1-34  pri1-35  pri1-37  pri1-39  pri1-43  pri1-44  pri1-45  pri1-46  pri1-48  pri1-49  pri1-5  pri1-6  pri1-8  pri1-9  pri2-1  pri2-11  pri2-12  (+40 more)
data/priorities/: createExpPriorities.sh  createExponentialPri.sh  createPriorities.sh  createRandomPriorities.sh  p1  p2  p3  p4  pr  pri1  pri2  pri3  pri4  priorities  ps  pt
j3.dSYM/Contents/: Info.plist
queries/: j3.cpp  test.cpp
queries/all/: j3.cpp  j4.cpp  p2.cpp  p3.cpp  p4.cpp  s1.cpp  s2.cpp  s3.cpp  s4.cpp  t2.cpp  t3.cpp  t4.cpp  test.cpp  ti2.cpp  ti3.cpp  ti4.cpp  tr1.cpp  tr2.cpp
queries/lqdags/: j3.cpp  j4.cpp  p2.cpp  p3.cpp  p4.cpp  s1.cpp  s2.cpp  s3.cpp  s4.cpp  t2.cpp  t3.cpp  t4.cpp  ti2.cpp  ti3.cpp  ti4.cpp  tr1.cpp  tr2.cpp
queries/original/: j3.cpp  j4.cpp  p2.cpp  p3.cpp  p4.cpp  s1.cpp  s2.cpp  s3.cpp  s4.cpp  t2.cpp  t3.cpp  t4.cpp  ti2.cpp  ti3.cpp  ti4.cpp  tr1.cpp  tr2.cpp
queries/tests-size/: t1  t1.cpp
runqueries/: compileAllAlgorithms.sh  compileAllAlgorithmsM1.sh  createResultsAllAlgorithms.sh  removeResults.sh  run-test.sh  runAllAlgorithms.sh  test
runqueries/all/: compileTraditionalJoin.sh  compileTraditionalJoinM1.sh  createPriorities.sh  j3  j4  p2  p3  p4  run-test.sh  runTraditionalJoin.sh  runqueries-j3-bfs-sorted.sh  runqueries-p2-bfs-sorted.sh  runqueries-p3-bfs-sorted.sh  runqueries-p4-bfs-sorted.sh  runqueries-s1-bfs-sorted.sh  runqueries-s2-bfs-sorted-args.sh  runqueries-s4-bfs-sorted-args.sh  runqueries-s4-bfs-sorted.sh  runqueries-t2-bfs-sorted-args.sh  runqueries-t2-bfs-sorted.sh  runqueries-t3-bfs-sorted.sh  runqueries-ti3-bfs-sorted-args.sh  runqueries-ti4-bfs-sorted-args.sh  runqueries-tr2-bfs-sorted.sh  s1  s2  s3  s4  t2  t3  t4  ti2  ti3  ti4  tr1  tr2
runqueries/lqdags/: compileLazyJoin.sh  compileLazyJoinM1.sh  j3  j4  p2  p3  p4  runLazyJoin.sh  runqueries-j3-bfs-sorted-args.sh  runqueries-j3-bfs-sorted.sh  runqueries-j4-bfs-sorted-args.sh  runqueries-j4-bfs-sorted.sh  runqueries-p3-bfs-sorted-args.sh  runqueries-s2-bfs-sorted.sh  runqueries-s3-bfs-sorted-args.sh  runqueries-t3-bfs-sorted.sh  runqueries-t4-bfs-sorted.sh  runqueries-ti2-bfs-sorted.sh  runqueries-ti3-bfs-sorted.sh  runqueries-ti4-bfs-sorted-args.sh  runqueries-ti4-bfs-sorted.sh  s1  s2  s3  s4  t2  t3  t4  ti2  ti3  ti4  tr1  tr2
runqueries/original/: compileTraditionalJoin.sh  compileTraditionalJoinM1.sh  getNumberResults.sh  j3  j4  p2  p3  p4  query-1000-j3.txt  query-1000-j4.txt  query-1000-p2.txt  query-1000-p3.txt  query-1000-p4.txt  query-1000-s1.txt  query-1000-s3.txt  query-1000-t2.txt  query-1000-t4.txt  query-1000-ti2.txt  query-1000-ti3.txt  query-1000-ti4.txt  runTraditionalJoin.sh  runqueries-j3-bfs-sorted-args.sh  runqueries-j3-bfs-sorted.sh  runqueries-j4-bfs-sorted-args.sh  runqueries-j4-bfs-sorted.sh  runqueries-p2-bfs-sorted-args.sh  runqueries-p3-bfs-sorted-args.sh  runqueries-p4-bfs-sorted-args.sh  runqueries-p4-bfs-sorted.sh  runqueries-s1-bfs-sorted-args.sh  runqueries-s2-bfs-sorted-args.sh  runqueries-s2-bfs-sorted.sh  runqueries-s3-bfs-sorted-args.sh  runqueries-s3-bfs-sorted.sh  runqueries-s4-bfs-sorted-args.sh  runqueries-t2-bfs-sorted-args.sh  runqueries-t3-bfs-sorted-args.sh  runqueries-t4-bfs-sorted-args.sh  runqueries-t4-bfs-sorted.sh  runqueries-ti2-bfs-sorted-args.sh  (+20 more)
runqueries/outputs/: fixS1pb.sh  runFixS1AllAlgorithms.sh  tmpfile  updateS1ColumnRes.sh
runqueries/runquery1000results/: compileAllAlgorithms1000results.sh  runAllAlgorithms1000query.sh
src/: MinMaxHeap.hpp  join_partial_results.cpp  join_ranked_results.cpp  joins.cpp  joins_ranked_size.cpp  lqdag.cpp  lqdag.hpp  lqdags.cpp  lqdags_functors.cpp  original_join_ordered  priority.cpp  qdagWeight.cpp  qdags.hpp  qdagsInclude.hpp  qdags_dfuds.hpp  rank.hpp  se_quadtree.hpp  se_quadtree_dfuds.hpp  utils.cpp  utils.hpp
src/dfuds/: join_partial_results.cpp  join_ranked_results.cpp
src/include/: bp_support_sada_v2.hpp
src/louds/: join_partial_results.cpp  join_ranked_results.cpp
src/lqdags/: formula_lqdag.hpp  formula_pi.hpp  operations.cpp  projection.hpp  projection.hpp.cpp  utils_lqdags.hpp
(+15069 files in other folders)
